--- a/frontend/components/footer.html
+++ b/frontend/components/footer.html
@@ -3,7 +3,7 @@
     
     <!-- Columna 1: Marca -->
     <div class="footer-brand">
-      <h3 class="footer-logo">🌙 Lunaria Threads</h3>
+      <a><img src="/assets/img/Navbar-001.png" alt="Lunaria Threads Logo" class="logo-footer-img"></a>
       <p>Moda, diversión y actitud para cada momento especial.</p>
     </div>
 
