Update usuario update

--- a/frontend/components/perfil.html
+++ b/frontend/components/perfil.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="../assets/css/perfil.css"> <!-- Estilos específicos de perfil -->
   <script src="../components/navbar.js" defer></script>
   <script src="../components/layout.js" defer></script> <!-- Layout se encarga de todo -->
+  <script src="../components/perfil.js" defer></script> <!-- ¡Añadido! Carga la lógica de la página -->
 </head>
 <body>
   <div id="navbar"></div>
