--- a/frontend/components/navbar.html
+++ b/frontend/components/navbar.html
@@ -53,7 +53,7 @@
         </div>
       </div>
       
-      <a class="icon-btn" href="#" title="Carrito">
+      <a class="icon-btn" href="/pages/carrito.html" title="Carrito">
         <svg viewBox="0 0 24 24" width="22" height="22" fill="none" stroke="currentColor" stroke-width="2"><circle cx="9" cy="21" r="1"/><circle cx="20" cy="21" r="1"/><path d="M1 1h4l2.68 12.39a2 2 0 0 0 2 1.61h7.72a2 2 0 0 0 2-1.61L23 6H6"/></svg>
       </a>
       <div id="searchPopover" class="search-popover" hidden>
@@ -62,4 +62,3 @@
     </div>
   </div>
 </header>
-
